--- a/src/main/resources/templates/car/update_car.html
+++ b/src/main/resources/templates/car/update_car.html
@@ -10,9 +10,9 @@
 <a href="/logout">Выход</a>
 <br>
 <br>
-<a href="/admin/person">Ко всем людям</a>
+<a href="/person">Ко всем людям</a>
 <br>
-<a href="/admin/car">Ко всем автомобилям</a>
+<a href="/car">Ко всем автомобилям</a>
 <br>
 <br>
 <h4>Обновить данные автомобиля</h4>
