--- a/src/main/resources/templates/car/all_cars.html
+++ b/src/main/resources/templates/car/all_cars.html
@@ -8,10 +8,8 @@
 
 <body>
 <br>
-<a href="/logout">Выход</a>
 <br>
-<br>
-<a href="/admin/person">Ко всем людям</a>
+<a href="/person">Ко всем людям</a>
 <br>
 <br>
 <h4>Список автомобилей</h4>
