--- a/src/main/resources/templates/person/new_person.html
+++ b/src/main/resources/templates/person/new_person.html
@@ -4,53 +4,35 @@
     <meta charset="UTF-8">
     <title>Новый человек</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"/>
+    <script src="/static/js/person/new_person_js.js" defer></script>
 </head>
 <body>
 <br>
 <a href="/logout">Выход</a>
 <br>
 <br>
-<a href="/admin/person">Ко всем людям</a>
+<a href="/person">Ко всем людям</a>
 <br>
-<a href="/admin/car">Ко всем автомобилям</a>
+<a href="/car">Ко всем автомобилям</a>
 <br>
 <br>
 <h4>Создать человека</h4>
 <br>
-<br>
-
-<form th:method="POST" th:action="@{/admin/person/save_person}" th:object="${person}">
-    <label for="firstName">Имя</label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
-    <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">First Name error</div>
+<form action="/person">
+    <div>
+        <label for="firstName">Имя</label>
+        <input type="text" name="firstName" id="firstName" placeholder="Имя" autocomplete="off">
+    </div>
+    <div>
+        <label for="lastName">Фамилия</label>
+        <input type="text" name="lastName" id="lastName" placeholder="Фамилия" autocomplete="off">
+    </div>
+    <div>
+        <label for="Email">Email</label>
+        <input type="email" name="email" id="Email" placeholder="Email" autocomplete="off">
+    </div>
     <br>
-    <laber for="lastName">Фамилия</laber>
-    <input type="text" th:field="*{lastName}" id="lastName"/>
-    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last Name error</div>
-    <br>
-    <laber for="email">Email</laber>
-    <input type="text" th:field="*{username}" id="email"/>
-    <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Email error</div>
-    <br>
-    <laber for="password">Пороль</laber>
-    <input type="text" th:field="*{password}" id="password"/>
-    <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
-    <br>
-    <p>
-        <label> Roles:
-            <input type="checkbox" name="roles"
-                   th:each="role : ${roles}"
-                   th:text="${role.getName()}"
-                   th:value="${role.getId()}"
-                   th:field="*{roles}"
-                   th:checkbox="${role.getName() == person.getRoles()}"
-            />
-        </label>
-    </p>
-    <br>
-    <br>
-    <input type="submit" value="Сохранить"/>
+    <button class="btn" type="submit">Сохранить</button>
 </form>
-
 </body>
 </html>
