--- a/src/main/resources/templates/person/person_by_id.html
+++ b/src/main/resources/templates/person/person_by_id.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Человек</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"/>
+
 </head>
 <body>
 <br>
@@ -17,13 +18,36 @@
 <br>
 <h4>Человек</h4>
 <br>
-<p th:text="${'ID: ' + person.getId()}">VALUE</p>
-<p th:text="${'Имя: ' + person.getFirstName()}">VALUE</p>
-<p th:text="${'Фамилия: ' + person.getLastName()}">VALUE</p>
-<p th:text="${'Email: ' + person.getUsername()}">VALUE</p>
-<br/>
-<a th:href="@{/admin/person/{id}/update_person(id=${person.getId()})}">Изменить</a>
-<br/>
+    <ul class="list-group list-group-flush" id="list"></ul>
 <br>
+    <a th:href="@{/person/{id}/update_person(id=${personId})}">Изменить</a>
+<br>
+<br>
+<h4>Автомобили человека</h4>
+<br>
+<div>
+    <table>
+        <thead>
+        <tr>
+            <th>Модель</th>
+            <th>Серийный номер</th>
+            <th>Перейти</th>
+            <th>Удалить</th>
+        </tr>
+        </thead>
+        <tbody id="data-output"></tbody>
+    </table>
+</div>
+<br>
+<h4>Добавить автомобиль человеку</h4>
+<br>
+
+
+
+<script th:inline="javascript">
+    let id = [[${personId}]];
+</script>
+<script src="/static/js/person/person_by_id_js.js"></script>
+<script src="/static/js/person/get_in_person_cars.js"></script>
 </body>
 </html>
