--- a/src/main/resources/templates/person/update_person.html
+++ b/src/main/resources/templates/person/update_person.html
@@ -18,7 +18,7 @@
 <h4>Обновить данные человека</h4>
 <br>
 <br>
-<form class="form" action="/person/${personId}" >
+<form action="/person/${personId}" >
     <div>
         <label for="firstName">Имя</label>
         <input type="text" name="firstName" id="firstName" placeholder="Имя" autocomplete="off">
