--- a/src/main/resources/templates/person/new_person.html
+++ b/src/main/resources/templates/person/new_person.html
@@ -18,7 +18,7 @@
 <br>
 <h4>Создать человека</h4>
 <br>
-<form action="">
+<form >
     <div>
         <label for="firstName">Имя</label>
         <input type="text" name="firstName" id="firstName" placeholder="Имя" autocomplete="off">
