--- a/src/main/resources/templates/person/all_persons.html
+++ b/src/main/resources/templates/person/all_persons.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css" />
-    <script src="/js/person/all_persons_js.js" defer></script>
     <title>Все люди</title>
 </head>
 <body>
@@ -30,5 +29,6 @@
     </table>
 </div>
 <a href="/person/new_person">Сохранить нового человека</a>
+<script src="/js/person/all_persons_js.js"></script>
 </body>
 </html>
