--- a/src/main/resources/templates/person/person_by_id.html
+++ b/src/main/resources/templates/person/person_by_id.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Человек</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"/>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
 <br>
@@ -41,7 +42,7 @@
 <h4>Добавить автомобиль человеку</h4>
 <br>
 <div class="page">
-    <form action="" class="form" id="add-from">
+    <form action="" class="form" id="add-form">
         <div class="input-box" id="model-input">
             <label for="model">Модель</label>
             <input data-min-length="3" data-max-length="25" class="input-field"
@@ -62,7 +63,7 @@ let id = [[${personId}]];
 </script>
 <script src="/static/js/person/person_by_id_js.js"></script>
 <script src="/static/js/person/get_in_person_cars.js"></script>
-<script src="/static/js/person/new_сar_to_person.js"></script>
 <script src="/static/js/validation/validation.js"></script>
+<script src="/static/js/person/new_сar_to_person.js"></script>
 </body>
 </html>
