--- a/src/main/resources/templates/car/update_car.html
+++ b/src/main/resources/templates/car/update_car.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Обновление автомобиля</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"/>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
 <br>
@@ -18,15 +19,18 @@
 <h4>Обновить данные автомобиля</h4>
 <br>
 <br>
-<form action="/car">
-    <div>
-        <label for="model">Имя</label>
-        <input type="text" name="model" id="model" placeholder="Модель" minlength="3">
-    </div>
-    <br>
-    <br>
-    <input type="submit" value="Обновить">
-</form>
+<div class="page">
+    <form action="" class="form" id="add-form">
+        <div class="input-box" id="model-input">
+            <label for="model">Модель</label>
+            <input data-min-length="3" data-max-length="25" class="input-field"
+                   id="model" type="text" name="model" placeholder="Модель">
+        </div>
+        <br>
+        <br>
+        <input type="submit" value="Обновить">
+    </form>
+</div>
 <script th:inline="javascript">
     let id = [[${carId}]];
 </script>
