--- a/src/main/resources/templates/person/update_person.html
+++ b/src/main/resources/templates/person/update_person.html
@@ -32,6 +32,25 @@
                    id="lastName" type="text" name="lastName" placeholder="Фамилия">
         </div>
         <br>
+        <form>
+            <fieldset>
+                <legend>Установить Права</legend>
+                <br>
+                <div>
+                    <label>
+                        User
+                        <input type="checkbox" id="user" name="user" value="user"/>
+                    </label>
+                </div>
+                <div>
+                    <label>
+                        Admin
+                        <input type="checkbox" id="admin" name="admin"/>
+                    </label>
+                </div>
+            </fieldset>
+        </form>
+        <br>
         <br>
         <input type="submit" value="Обновить">
     </form>
