--- a/src/main/resources/templates/person/login.html
+++ b/src/main/resources/templates/person/login.html
@@ -16,10 +16,10 @@
         You have been logged out.
     </div>
     <form th:action="@{/login}" method="post">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Username">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password">
+        <label for="username">Логин</label>
+        <input type="text" id="username" name="username" placeholder="Логин">
+        <label for="password">Пароль</label>
+        <input type="password" id="password" name="password" placeholder="Пароль">
         <input type="submit" value="Вход">
     </form>
     <br>
