--- a/src/main/resources/templates/person/register.html
+++ b/src/main/resources/templates/person/register.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"/>
+    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
 </head>
 <body>
 <br>
@@ -10,25 +11,33 @@
 <h3>Регистрация</h3>
 <br>
 <br>
-<form th:method="POST" th:action="@{/auth/register}" th:object="${person}">
-    <label for="firstName">Имя</label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
-    <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">First Name error</div>
+<form action="" class="form" id="add-form">
+    <div class="input-box" id="firstName-input">
+        <label for="firstName">Имя</label>
+        <input data-min-length="2" data-max-length="25" class="input-field"
+               id="firstName" type="text" name="firstName" placeholder="Имя">
+    </div>
+    <div class="input-box" id="lastName-input">
+        <label for="lastName">Фамилия</label>
+        <input data-min-length="5" data-max-length="25" class="input-field"
+               id="lastName" type="text" name="lastName" placeholder="Фамилия">
+    </div>
+    <div class="input-box" id="email-input">
+        <label for="Email">Email</label>
+        <input class="input-field" id="Email" type="email" name="username"
+               placeholder="Email" autocomplete="off">
+    </div>
+    <div class="input-box" id="password-input">
+        <label for="password">Пароль</label>
+        <input class="input-field" id="password" type="password" name="password"
+               placeholder="Пароль" autocomplete="off">
+    </div>
     <br>
-    <laber for="lastName">Фамилия</laber>
-    <input type="text" th:field="*{lastName}" id="lastName"/>
-    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last Name error</div>
     <br>
-    <laber for="email">Email</laber>
-    <input type="text" th:field="*{username}" id="email"/>
-    <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Email error</div>
-    <br>
-    <laber for="password">Пороль</laber>
-    <input type="text" th:field="*{password}" id="password"/>
-    <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
-    <br>
-    <br>
-    <input type="submit" value="Сохранить"/>
+    <button class="btn" type="submit">Сохранить</button>
+
 </form>
+<script src="/js/validation/validation.js"></script>
+<script src="/js/person/register_person_js.js"></script>
 </body>
 </html>
